# ai-trading-agent

./: .env.example  .gitignore  =1.26  README.md  pyproject.toml  requirements.txt
config/: settings.py
docs/: architecture.md  phases.md
src/: main.py
src/engines/: base.py  llm_engine.py
src/schemas/: journal.py  market.py  message.py  mt5.py  trade.py
src/services/: conversation.py  debate_engine.py  intent_parser.py  journal.py  market_data.py  mt5_executor.py  order_builder.py  risk_manager.py  technical_analysis.py  telegram_bot.py  trade_draft.py
src/utils/: formatting.py  logging.py
tests/: conftest.py  test_conversation.py  test_debate_engine.py  test_intent_parser.py  test_order_builder.py  test_risk_manager.py  test_schemas.py  test_trade_draft.py
